# coho

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  TODO.md  coho.py  coho.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
about/: index.html
coho/: __init__.py
coho/config/: __init__.py  builder.py  loader.py  manager.py  models.py  parser.py  reader.py  schemas.py  types.py  validator.py
coho/core/: __init__.py  costs.py  detector.py  element.py  graph.py  interactor.py  metrics.py  models.py  monitor.py  operator.py  operators.py  plots.py  propagator.py  resources.py  solvers.py  wave.py  wavefront.py
coho/engine/: __init__.py  optimization,py  simulation.py
coho/factories/: __init__.py  base_factory.py  detector_factory.py  element_factory.py  experiment_factories.py  interactor_factory.py  operator_factories.py  optimization_factories.py  propagator_factory.py  registry.py  simulation_factories.py  wavefront_factory.py
coho/resources/: README.md
coho/workflow/: engine.py
contributing/: index.html
docs/: about.md  index.md  installation.md  license.md  quickstart.md
examples/: index.html
images/: checkerboard.npy  house.npy  peppers.npy  shepplogan.npy
installation/: index.html
introduction/: index.html
license/: index.html
quickstart/: index.html
requirements/: requirements.txt
search/: search_index.json
snippets/: basic.py  batch.py  codedholo.py  config.yaml  core.py  crop.py  holography.py  noise.py  optimize.py  pipeline.py  workbench.py
usage/: index.html
(+163 files in other folders)
