[tool.poetry]
name = "coho"
version = "0.1.0"
description = "Coded Holography Package"
authors = ["Doga Gursoy <sparsedata@gmail.com>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
xraylib = "^4.1.5"
scikit-image = "^0.24.0"
pyyaml = "^6.0.2"
fire = "^0.7.0"
cerberus = "^1.3.5"
tomli = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pre-commit = "^4.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.43"
mkdocs-material-extensions = "^1.3.1"
mkdocs-versioning = "^0.4.0"
mkdocstrings = {extras = ["python"], version = "^0.26.2"}
pymdown-extensions = "^10.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


